src/objects/Position__c.object
<CustomObject>
    <fields>
        <fullName>Apex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C#</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>IF( ISNULL(Close_Date__c) , TODAY()-Open_Date__c, Close_Date__c-Open_Date__c)</formula>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Educational_Requirements__c</fullName>
        <label>Educational Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <picklist>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehousing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hire_By__c</fullName>
        <formula>TODAY() +90</formula>
        <label>Hire By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Java__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Java</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Javascript__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Javascript</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <label>Job Level</label>
        <picklist>
            <controllingField>Functional_Area__c</controllingField>
            <picklistValues>
                <fullName>FN-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-400</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>San Francisco, CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Austin,TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boulder, CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London, England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York, NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai, India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sydney, Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tokyo, Japan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Pay__c</fullName>
        <label>Max Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Pay__c</fullName>
        <label>Min Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Responsibilities__c</fullName>
        <label>Responsibilities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Skills_Required__c</fullName>
        <label>Skills Required</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Position</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending-Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open-Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Filled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed-Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Travel_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Position Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <recordTypes>
        <fullName>IT_Position</fullName>
        <active>true</active>
        <description>Record type for all IT positions.</description>
        <label>IT Position</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Position</fullName>
        <active>true</active>
        <description>Record type for all non-IT positions.</description>
        <label>Standard Position</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Close_Date_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(Close_Date__c )   &amp;&amp;  (ISPICKVAL( Status__c , &quot;Closed - Filled&quot;)  || ISPICKVAL( Status__c ,&quot;Closed - Not Approved&quot; ))</errorConditionFormula>
        <errorDisplayField>Close_Date__c</errorDisplayField>
        <errorMessage>Close Date must be specified when Status is set to &apos;Closed - Filled&apos; or &apos;Closed - Not Approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Min_Pay_Rule</fullName>
        <active>true</active>
        <description>Min Pay should never exceed Max Pay</description>
        <errorConditionFormula>Min_Pay__c  &gt;  Max_Pay__c</errorConditionFormula>
        <errorDisplayField>Min_Pay__c</errorDisplayField>
        <errorMessage>Min Pay cannot exceed Max Pay</errorMessage>
    </validationRules>
</CustomObject>